--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,5 +1,3 @@
-#태연
-
 {% extends 'base.html' %}
 
 {% block title %}
@@ -9,8 +7,7 @@
     <div class="container">
         <div class="wrap">
             <h2 class="title-center"> 로그인</h2>
-            <form class="form-area" method="post" action="/sign-in/">
-                {% csrf_token %}
+            <form class="form-area">
                 <div class="form-group mt-2 mb-2">
                     <label for="username">이름</label>
                     <input type="text" class="form-control" id="username" name="username">
