--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -1,19 +1,15 @@
-#태연
 
-{% extends 'base.html' %}
 
-{% block title %}
+
     회원가입
-{% endblock %}
-{% block content %}
+
     <div class="container">
         <div class="wrap">
             <h2 class="title-center"> 회원가입 </h2>
-            <form class="form-area" method="post" action="/sign-up/">
-                {% csrf_token %}
+            <form class="form-area">
                 <div class="form-group mt-2 mb-2">
                     <label for="username">이름</label>
-                    <i"text" class="form-control" id="username" name="username">
+                    <input type="text" class="form-control" id="username" name="username">
                 </div>
                 <div class="form-group mt-2 mb-2">
                     <label for="password">비밀번호</label>
@@ -23,14 +19,36 @@
                     <label for="password2">비밀번호 확인</label>
                     <input type="password" class="form-control" id="password2" name="password2">
                 </div>
-                <div class="form-group mt-2 mb-2">
-                    <label for="bio">나를 한마디로</label>
-                    <input type="text" class="form-control" id="bio" name="bio">
-                </div>
                 <hr>
                 <div style="float: right">
                     <button type="submit" class="btn btn-primary">회원가입</button>
-                    <a href="/sign-in" class="btn btn-secondary">로그인 페이지로</a>
+                    <a href="/{% extends 'base.html' %}>
+
+    로그인
+
+    <div class="container">
+        < class="wrap">
+            <h2 class="title-center"> 로그인</h2>
+            < class="form-area">
+                <div class="form-group mt-2 mb-2">
+                    <label for="username">이름</label>
+                    <input type="text" class="form-control" id="username" name="username">
+                </div>
+                <div class="form-group mt-2 mb-2">
+                    <label for="password">비밀번호</label>
+                    <input type="password" class="form-control" id="password" name="password">
+                </div>
+                <hr>
+                <div style="float: right">
+                    <button type="submit" class="btn btn-primary">로그인</button>
+                    <a href="/log_in" class="btn btn-secondary">회원가입 페이지로</a>
+                </div>
+            
+            </form>
+
+        </div>
+    </div>
+" class="btn btn-secondary">로그인 페이지로</a>
                 </div>
             </form>
 
