--- a/templates/commit/write_view.html
+++ b/templates/commit/write_view.html
@@ -9,7 +9,7 @@
             <div class="media-body">
               <h5 class="mt-0">게시글 작성</h5>
               <p>
-                <form action="/write-view/" method="post">
+                <form action="/write_view/" method="post">
                   {% csrf_token %}
                   <div class="form-group mb-1">
                     <input class="form-control" name='my-header' id="my-header" placeholder="제목을 입력해주세요">
