--- a/templates/commit/main.html
+++ b/templates/commit/main.html
@@ -13,6 +13,7 @@
           </div>
         </div>
       </div>
+      <a href="/write_view" style="width: 100px" class="btn btn-outline-primary">글쓰기</a>
       <div class="row">
         {% for co in commit %}
           <div class="col-md-12 mb-2">
@@ -31,6 +32,9 @@
                   </a>
                 </div>
                 <div class="media">
+                  <div class="media-body">
+                    <h3 class="mt-0">{{ co.header }}</h5>
+                  </div>
                   <div class="media-body">
                     <h5 class="mt-0">{{ co.content }}</h5>
                   </div>
